--- a/client/elements/account-element.html
+++ b/client/elements/account-element.html
@@ -1,14 +1,35 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 
 <dom-module id="account-element">
 
-  <template>
+<style>
+</style>
+
+<iron-ajax>
+  auto
+  id="get-accounts"
+  url="http://localhost:9090/api/getAccounts"
+  handle-as="json"
+  last-response="{{accountsResponse}}"
+  method="GET"
+</iron-ajax>
+
+  <template
     <p>I'm a DOM element. This is my local DOM!</p>
-  </template>
+
+    <template is="dom-repeat" items="{{accountsResponse}}">
+      <div><span>{{item.firstName}}</span></div>
+    </template>
+
+</template>
 
   <script>
     Polymer({
-      is: "account-element"
+      is: "account-element",
+      hresponse: function(data) {
+        this.accounts = data;
+      }
     });
   </script>
 
