Added accounts variable into js function for testing

--- a/client/elements/account-element.html
+++ b/client/elements/account-element.html
@@ -27,6 +27,13 @@
   <script>
     Polymer({
       is: "account-element",
+      // ready: function() {
+      //   this.accounts =
+      //   [
+      //     {firstName:"Harrison"},
+      //     {firstName:"Gabby"}
+      //   ];
+      // },
       hresponse: function(data) {
         this.accounts = data;
       }
