--- a/client/elements/account-element.html
+++ b/client/elements/account-element.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<dom-module id="my-element">
+<dom-module id="account-element">
   <template>
     <iron-ajax url="http://localhost:9999/api/getAccounts" auto last-response="{{resp}}"></iron-ajax>
     <textarea value="{{resp.0.firstName}}"></textarea>
@@ -24,7 +24,7 @@
 
 <script>
   Polymer({
-    is: 'my-element',
+    is: 'account-element',
     properties: {
       resp: {
         type: Object
@@ -32,5 +32,3 @@
     }
   });
 </script>
-
-<my-element></my-element>
