--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <!-- 3. Declare the element by its tag. -->
-    <my-element></my-element>
+    <account-element></account-element>
   </body>
 </html>
