--- a/client/elements/account-element.html
+++ b/client/elements/account-element.html
@@ -14,8 +14,8 @@
     <template is="dom-repeat" items="{{resp}}" as="account">
       <div>
         <ul><b><span>{{account.firstName}}</span> <span>{{account.lastName}}</span></b></ul>
-          <template is="dom-repeat" items="{{account.transactions}}" as="transaction">
-            <p><span>{{transaction.amount}}</span>, <span>{{transaction.location}}</span></p>
+          <template is="dom-repeat" items="{{account.transactions}}" as="transaction" as-index="index">
+            <p><span>{{index}}</span>, <span>{{transaction.amount}}</span>, <span>{{transaction.location}}</span></p>
           </template>
       </div>
     </template>
