Setup basic angular routing

--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,13 @@
-I am an angular app!
+<!doctype html>
+<html lang="en" ng-app="bankApp">
+	<head>
+		  <script src="bower_components/angular/angular.js"></script>
+		  <script src="bower_components/angular-route/angular-route.js"></script>
+			<script src="js/main.js"></script>
+	</head>
+		<body>
+
+			  <div ng-view></div>
+
+		  </body>
+</html>
