Added a nav menu

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,10 @@
 		  <script src="bower_components/angular-route/angular-route.js"></script>
 			<script src="js/main.js"></script>
 	</head>
+	<nav>
+		<a href="/#/">Home</a>
+		<a href="/#/accounts/">Accounts Summary</a>
+	</nav>
 		<body>
 
 			  <div ng-view></div>
