--- a/client/elements/account-element.html
+++ b/client/elements/account-element.html
@@ -12,9 +12,9 @@
     <iron-ajax auto url="http://localhost:9999/api/getAccounts" last-response="{{resp}}" method="GET"></iron-ajax>
     <template is="dom-repeat" items="{{resp}}" as="account">
       <div>
-        <u><b><span>{{account.firstName}}</span> <span>{{account.lastName}}</span></b></u>
+        <ul><b><span>{{account.firstName}}</span> <span>{{account.lastName}}</span></b></ul>
           <array-selector id="selector" items="{{resp}}" selected="{{account}}"></array-selector>
-          <template is="dom-repeat" items="{{account.transactions}}" as="transaction" as-index="index" sort="_sortAccounts">
+          <template is="dom-repeat" items="{{account.transactions}}" as="transaction" as-index="index">
             <p><span>{{index}}</span>, <span>{{transaction.amount}}</span>, <span>{{transaction.location}}</span></p>
           </template>
       </div>
@@ -29,16 +29,6 @@
       resp: {
         type: Object
       }
-    },
-    _sortAccounts: function(items) {
-      var sorter = function (a, b) {
-        var accountA = a.accountId.toLowerCase();
-        var accountB = b.accountId.toLowerCase();
-        if (accountA < accountB)  return -1;
-        if (accountA > accountB) return 1;
-        return 0;
-      };
-    return items.sort(sorter);
     }
   });
 </script>
