--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 	<head>
 		  <script src="bower_components/angular/angular.js"></script>
 		  <script src="bower_components/angular-route/angular-route.js"></script>
-			<script src="js/main.js"></script>
+			<script src="js/routes.js"></script>
 	</head>
 	<nav>
 		<a href="/#/">Home</a>
